[package]
name = "fioravanti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dialoguer = "0.10.2"
indicatif = "0.17.1"
rodio = "0.16.0"
serde_json = { version = "1.0.87", features = ["preserve_order"] }
